# vai

./: .gitattributes  .gitignore  build.jai  readme.md
docs/: scene-preview-plugins.md
modules/Simp/: font.jai
modules/Simp/backend/: gl.jai
native_language/: CMakeLists.txt
native_preview/: CMakeLists.txt  vai_builtin_scene_preview.cpp  vai_image_preview_gl_smoke_test.cpp  vai_scene_preview_api.h  vai_scene_preview_smoke_test.cpp
src/: action_execution.jai  bit_array.jai  circular_buffer.jai  commands.jai  crash_regression_tests.jai  cursor.jai  draw_icon.jai  dynamic_pool.jai  editor_view.jai  encoding.jai  enum_mapping.jai  explorer_preview.jai  logging.jai  main.jai  mappings.jai  math.jai  meta.jai  number_interpretation.jai  options.jai  project_config.jai  render_text.jai  runtime_params.jai  scene_preview.jai  static_params.jai  struct_file.jai  syntax_highlight.jai  text.jai  text_buffer.jai  text_processing.jai  thread_worker.jai  time.jai  tree_sitter.jai  utility.jai  viewport.jai
src/graphics/: graphics.jai  win32_graphics.jai
src/input/: input.jai  mouse.jai  win32_input.jai
src/osutil/: win32_utils.jai
src/view_layers/: debug.jai  file_editor.jai  file_explorer.jai  os_console.jai  project_explorer.jai  top_bar.jai  vim_console.jai
src/window/: win32_window.jai  window.jai
